# xv6-modification

./: .kernel.asm.swp  .proc.c.swp  .spinlock.c.swp  .x86.h.swp  CMakeLists.txt  Makefile  README  RMME.h  _cat  _date  _echo  _forktest  _gp  _grep  _halt  _init  _kill  _ln  _ls  _mkdir  _ps  _ps-test  _rm  _sh  _stressfs  _time  _tuid  _usertests  _wc  _zombie  _zombieFree  addflag.sh  bio.c  bootmain.c  cat.asm  cat.c  cat.sym  chgrp.c  chmod.c  chown.c  (+110 more)
