cmake_minimum_required(VERSION 3.9)
project(p2_xv6)

set(CMAKE_CXX_STANDARD 11)

add_executable(p2_xv6
        _date
        asm.h
        bio.c
        bootasm.S
        bootmain.c
        buf.h
        BUGS
        cat.c
        chgrp.c
        chmod.c
        chown.c
        console.c
        cuth
        date.c
        date.h
        defs.h
        dot-bochsrc
        echo.c
        elf.h
        entry.S
        entryother.S
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        gdbutil
        grep.c
        halt.c
        ide.c
        init.c
        initcode.S
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kernel.ld
        kill.c
        lapic.c
        LICENSE
        ln.c
        log.c
        ls.c
        main.c
        Makefile
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        Notes
        p5-test.c
        p5-test.h
        param.h
        picirq.c
        pipe.c
        pr.pl
        print_mode.c
        printf.c
        printpcs
        proc.c
        proc.h
        ps.c
        README
        README-PSU
        rm.c
        runoff
        runoff.list
        runoff.spec
        runoff1
        sh.c
        show1
        sign.pl
        sleep1.p
        spinlock.c
        spinlock.h
        spinp
        stat.h
        stressfs.c
        string.c
        swtch.S
        symlink.patch
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        testSched.c
        testsetuid.c
        time.c
        timer.c
        toc.ftr
        toc.hdr
        trap.c
        trapasm.S
        traps.h
        TRICKS
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usertests.c
        usys.S
        vectors.pl
        vm.c
        wc.c
        x86.h
        zombie.c
        tuid.c tuid.c)
